--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jasmine": "^2.3.1",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "spotify-web-api-node": "^2.1.0"
   }
 }
