--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "markdown-table-processor",
+  "name": "spotifyProj",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.2.0",
     "body-parser": "~1.13.1",
     "cookie-parser": "~1.3.5",
     "cookie-session": "^1.2.0",
