--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "spotify-web-api-node": "^2.1.0"
+    "spotify": "^0.3.0",
+    "spotify-web-api-node": "^2.1.0",
+    "unirest": "^0.4.2"
   }
 }
